--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -479,5 +479,36 @@
         "message": "कृपया अपना इंटरनेट कनेक्शन जांचें और पुनः प्रयास करें।"
       }
     }
-  }
+  },
+  "VerifierTrustPage": {
+      "modal": {
+        "title": "अज्ञात सत्यापनकर्ता",
+        "domain": "verify.gov.in",
+        "description": "सुनिश्चित करें कि आप इस सत्यापनकर्ता को पहचानते हैं या इस पर भरोसा करते हैं। \nएक बार जब आप इस सत्यापनकर्ता पर भरोसा कर लेते हैं:",
+        "point1": "कार्ड आपके वॉलेट में सुरक्षित रूप से सहेजा जाएगा।",
+        "point2": "इस सत्यापनकर्ता को आपकी विश्वसनीय सूची में जोड़ा जाएगा।",
+        "point3": "अगली बार उनसे डाउनलोड करते समय आपको फिर से भरोसे की समीक्षा करने की आवश्यकता नहीं होगी।",
+        "trustButton": "हाँ, मैं इस सत्यापनकर्ता पर भरोसा करता हूँ",
+        "notTrustButton": "नहीं, मैं इस सत्यापनकर्ता पर भरोसा नहीं करता हूँ",
+        "cancelButton": "रद्द करें",
+        "infoTooltipButton": "भरोसा करने का क्या मतलब है?",
+        "infoTooltipText": "सत्यापनकर्ता पर भरोसा करने से उन्हें आपकी साख का अनुरोध करने की अनुमति मिलती है। अगले चरण में साझा करने के लिए आप अभी भी साख का चयन करेंगे।"
+      },
+      "cancelConfirmationModal": {
+        "title": "क्या आप वाकई रद्द करना चाहते हैं?",
+        "description": "यदि आप इसे रद्द करते हैं, तो आपका अनुरोध संसाधित नहीं होगा और खो सकता है।",
+        "confirmButton": "हाँ, रद्द करें",
+        "goBackButton": "वापस जाएँ"
+      },
+      "UserAuthorizationPage": {
+        "validateVerifierError": "सत्यापनकर्ता अनुरोध को सत्यापित करने में विफल रहा। कृपया पुन: प्रयास करें।",
+        "invalidVerifierResponse": "अमान्य सत्यापनकर्ता प्रतिक्रिया प्राप्त हुई।",
+        "addTrustedVerifierError": "सत्यापनकर्ता को विश्वसनीय सूची में जोड़ने में विफल रहा।"
+      },
+      "ErrorCard": {
+        "defaultTitle": "त्रुटि",
+        "defaultDescription": "कुछ गलत हो गया। कृपया पुन: प्रयास करें।",
+        "closeButton": "बंद करें"
+      }
+    }
 }
