--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -59,13 +59,13 @@
     },
     "QuickTip": {
       "heading": "உங்கள் சான்றுகளை உடனடியாக பதிவிறக்குவதற்கான விரைவான குறிப்புகள்",
-      "toastText":"விரைவில்",
+      "toastText": "விரைவில்",
       "buttontext": "இங்கே கிளிக் செய்யவும்"
     },
     "Login": {
       "loginTitle": "உள்நுழையவும்",
-      "loginDescription":"உங்கள் கணக்கில் உள்நுழையவோ அல்லது உங்கள் சான்றுகளுக்கு அணுக விருந்தினராக தொடரவோ செய்யுங்கள்.",
-      "loginNote":"விருந்தினர் பயன்முறையில் சில அம்சங்கள் கட்டுப்படுத்தப்பட்டிருக்கலாம்.",
+      "loginDescription": "உங்கள் கணக்கில் உள்நுழையவோ அல்லது உங்கள் சான்றுகளுக்கு அணுக விருந்தினராக தொடரவோ செய்யுங்கள்.",
+      "loginNote": "விருந்தினர் பயன்முறையில் சில அம்சங்கள் கட்டுப்படுத்தப்பட்டிருக்கலாம்.",
       "loggingIn": "உள்நுழைகிறது",
       "loginGoogle": "Google மூலம் தொடரவும்",
       "loginGuest": "விருந்தினராக தொடரவும்"
@@ -294,80 +294,80 @@
     },
     "item8": {
       "title": "Inji Wallet's Web Interface இல் நான் சரிபார்க்கக்கூடிய நற்சான்றிதழை (VC) உருவாக்கும்போது என்ன நடக்கும்?",
-      "description1":"1. நீங்கள் வழங்குபவரையும் நற்சான்றிதழின் வகையையும் தேர்ந்தெடுக்கிறீர்கள்.",
-      "description2":"2. அங்கீகாரத்திற்காக வழங்குபவரின் உள்நுழைவு பக்கத்திற்கு வழிமாற்றுகள்.",
-      "description3":"3. உள்நுழைந்த பிறகு, வழங்குபவர் VC ஐ வழங்குகிறார், துரியனைப் பயன்படுத்தி JSON ஆகப் பாதுகாப்பாகச் சேமிக்கப்படும். ",
-      "description4":"4.VC விவரங்கள் மற்றும் QR குறியீடு கொண்ட PDF உருவாக்கப்படுகிறது.",
-      "description5":"5.QR குறியீடு எளிதாக பகிர்வதற்காக VC சேமிப்பக URL உடன் இணைக்கிறது."
+      "description1": "1. நீங்கள் வழங்குபவரையும் நற்சான்றிதழின் வகையையும் தேர்ந்தெடுக்கிறீர்கள்.",
+      "description2": "2. அங்கீகாரத்திற்காக வழங்குபவரின் உள்நுழைவு பக்கத்திற்கு வழிமாற்றுகள்.",
+      "description3": "3. உள்நுழைந்த பிறகு, வழங்குபவர் VC ஐ வழங்குகிறார், துரியனைப் பயன்படுத்தி JSON ஆகப் பாதுகாப்பாகச் சேமிக்கப்படும். ",
+      "description4": "4.VC விவரங்கள் மற்றும் QR குறியீடு கொண்ட PDF உருவாக்கப்படுகிறது.",
+      "description5": "5.QR குறியீடு எளிதாக பகிர்வதற்காக VC சேமிப்பக URL உடன் இணைக்கிறது."
     },
-    "item9":{
-      "title":"நற்சான்றிதழ் PDF இல் QR குறியீட்டின் பங்கு என்ன?",
-      "description1":"PDF இல் உள்ள QR குறியீடு பாதுகாப்பான VC சேமிப்பக URL உடன் இணைக்கிறது, இது அடர்த்தியான தரவு இல்லாமல் நற்சான்றிதழ்களை ஸ்கேன் செய்து மீட்டெடுப்பதை எளிதாக்குகிறது."
-      },
-      "item10":{
-        "title":"இன்ஜி வாலட்டின் வலை இடைமுகம் எனது VC பாதுகாப்பாக சேமிக்கப்படுவதை எவ்வாறு உறுதி செய்கிறது?",
-        "description1":"MOSIP ID இயங்குதளத்தில் இருந்து தரவு பகிர்வு சேவையுடன் (துரியன்) ஒருங்கிணைக்கிறது, VC ஐ JSON பொருளாக சேமித்து, அங்கீகரிக்கப்பட்ட சரிபார்ப்பாளர்களுக்கு மட்டுமே அணுகல் பாதுகாக்கப்படுகிறது."
-      },
-      "item11":{
-        "title":"இன்ஜி வெரிஃபை உடன் ஆன்லைன் பகிர்வு அம்சம் எவ்வாறு செயல்படுகிறது?",
-        "description1":"1. VC PDF இல் QR குறியீடு உள்ளது.",
-        "description2":"2. PDF ஐ அச்சிடலாம் அல்லது தொலைபேசியில் சேமிக்கலாம். ",
-        "description3":"3. சரிபார்ப்பவர் (எ.கா., Inji Verify) QR குறியீட்டை ஸ்கேன் செய்கிறது. ",
-        "description4":"4. Inji Wallet அங்கீகரிக்கிறது மற்றும் VC ஐ சரிபார்ப்பவருடன் பகிர்ந்து கொள்கிறது."
-      },
-      "item12":{
-        "title":"முழு VC தரவுக்குப் பதிலாக QR குறியீட்டில் URL ஐ ஏன் உட்பொதிக்க வேண்டும்?",
-        "description1":"URL ஐ உட்பொதிப்பது, எளிதான ஸ்கேனிங்கிற்காக QR குறியீட்டின் அடர்த்தியைக் குறைக்கிறது, இது திறமையான குறுக்கு சாதனம் அல்லது தொலைநிலை சரிபார்ப்பை அனுமதிக்கிறது."
-      },
-      "item13":{
-        "title":"எனது VC ஐ ஆன்லைனில் மற்றும் ஆஃப்லைனில் பகிர்ந்து கொள்ள முடியுமா?",
-        "description1":"1. ஆன்லைன் : சரிபார்ப்பான் ஆனது PDF அல்லது ஃபோன் திரையில் இருந்து ஸ்கேன் செய்ய முடியும், மேலும் Inji Wallet VCஐ அங்கீகரித்து பகிரும். ",
-        "description2":"2. ஆஃப்லைன் : ஸ்கேனிங் மற்றும் VC மீட்டெடுப்பிற்காக அச்சிடப்பட்ட PDF ஐ வழங்கலாம்."
-      },
-      "item14":{
-        "title":"ஆன்லைன் பகிர்வின் போது Inji Wallet எவ்வாறு சரிபார்த்து அங்கீகாரம் அளிக்கிறது?",
-        "description1":"சரிபார்ப்பான் நற்சான்றிதழ்கள் உள் பட்டியலிலிருந்து சரிபார்க்கப்படும். அங்கீகரிக்கப்பட்டால், இணைய இடைமுகத்துடன் கூடிய இன்ஜி வாலட் VC ஐ vp_token ஐப் பயன்படுத்தி பாதுகாப்பாக சரிபார்ப்பிற்கு அனுப்புகிறது."
-      },
-      "item15":{
-        "title":"OpenID4VP என்றால் என்ன, அது Inji Wallet இல் எவ்வாறு பயன்படுத்தப்படுகிறது?",
-        "description1":"OpenID4VP (சரிபார்க்கக்கூடிய விளக்கக்காட்சிகளுக்கான OpenID) தரநிலை VC களின் பாதுகாப்பான பகிர்வை அனுமதிக்கிறது. Inji Wallet ஆனது VC சேமிப்பகத்திற்கான QR குறியீட்டை உருவாக்குகிறது, Inji Verify போன்ற சரிபார்ப்பவர்களை VC களை பாதுகாப்பாகக் கோரவும் பெறவும் உதவுகிறது."
-      },
-      "item16":{
-        "title":"இன்ஜி வாலட்டைப் பயன்படுத்தி எனது VC பாதுகாப்பாக பகிரப்பட்டது என்பதை நான் எப்படி அறிவது??",
-        "description1":"சரிபார்ப்பவர் QR குறியீட்டை ஸ்கேன் செய்து, Inji Wallet அங்கீகரித்த பிறகு, VC ஆனது சரிபார்ப்பவருக்குப் பாதுகாப்பாக வழங்கப்படும், அவர் அதைச் சரிபார்த்து உறுதிப்படுத்துகிறார்."
-      },
-      "item17":{
-        "title":"QR குறியீடு VC உருவாக்கப்பட்ட இடத்தில் இருந்து வேறொரு சாதனத்தில் ஸ்கேன் செய்யப்பட்டால் என்ன நடக்கும்?",
-        "description1":"குறுக்கு-சாதனப் பகிர்வை ஆதரிக்கிறது. VC PDF இன் எந்த நகலில் இருந்தும் சரிபார்ப்பவர் ஸ்கேன் செய்யலாம், மேலும் இன்ஜி வாலட் VC ஐச் சரிபார்த்து பாதுகாப்பாகப் பகிரும்."
-      },
-      "item18":{
-        "title":"இன்ஜி வாலட் வெவ்வேறு QR குறியீடு வடிவங்களை ஆதரிக்குமா?",
-        "description1":"ஆம். கட்டமைப்பு-அடிப்படையிலான தலைமுறை QR குறியீடுகளைக் கொண்டிருக்க அனுமதிக்கிறது: ",
-        "description2":"1. எளிதாக பகிர்வதற்காக VC சேமிப்பகத்திற்கு URL அல்லது ",
-        "description3":"2. JSON இல் முழு VC தரவு (அடர்வு வடிவம்)."
-      },
-      "item19":{
-        "title":"பகிர்ந்த பிறகு நற்சான்றிதழ் சரிபார்ப்பை Inji Wallet எவ்வாறு கையாள்கிறது?",
-        "description1":"பகிர்வுக்குப் பிறகு, இன்ஜி சரிபார்ப்பு VC நம்பகத்தன்மையை சரிபார்க்கிறது. செல்லுபடியாகும் எனில், சரிபார்ப்பவர் நற்சான்றிதழின் சரிபார்ப்பு நிலையை உறுதிப்படுத்துகிறார்."
-      },
-      "item20":{
-        "title":"என்ன வகையான நற்சான்றிதழ் வழங்குபவர்கள் ஆதரிக்கப்படுகிறார்கள்?",
-        "description1":"OpenID4VCI நெறிமுறையைப் பின்பற்றும் எந்தவொரு வழங்குநரையும் Inji Wallet இல் நம்பலாம். இந்த வழங்குநர்கள் VCகளை வழங்குவதற்கும் பதிவிறக்குவதற்கும் தேவையான தரவை வழங்குகிறார்கள்."
-      },
-      "item21": {
-        "title": "இந்த வெளியீட்டில் அறிமுகப்படுத்தப்பட்ட அம்சங்களைப் பற்றிய விரிவான தகவல்களை நான் எங்கே காணலாம்?",
-        "description1": "விவரத்திற்கு <a href=\"https://docs.mosip.io/inji/inji-web/overview\" target=\"_blank\">Inji Wallet ஆவணத்தைப்</a> பார்க்கவும் படிகள், கணினி மேலோட்டங்கள் மற்றும் புதிய அம்சங்களின் விளக்கங்கள்."
-      },
-      "item22":{
-        "title":"இன்ஜி வாலட்டில் ஆன்லைன் பகிர்வு அம்சத்தை நான் எவ்வாறு தொடங்குவது?",
-        "description1":"Inji Wallet's Web Interface வழியாக VCகளை அணுகவும், தரவிறக்கம் செய்து, QR குறியீட்டைப் பயன்படுத்தி நேரில் அல்லது ஆன்லைனில் சரிபார்ப்பாளர்களுடன் நற்சான்றிதழ்களைப் பகிரவும். விவரங்கள் <a href=\"https://docs.mosip.io/inji இல் /inji-web/functional-overview/end-user-guide\" target=\"_blank\"> பயனர் வழிகாட்டி </a> ."
-      },
-      "item23":{
-        "title":"இன்ஜி வாலட்டில் உட்பொதிக்கப்பட்ட VC மற்றும் ஆன்லைன் பகிர்வுக்கு இடையே நான் எப்படி மாறுவது?",
-        "description1":"Mimoto வழங்குபவரின் அமைப்புகளில் qr_code_type ஐ உள்ளமைக்கவும்: ",
-        "description2":"1. EmbeddedVC: ஆஃப்லைன் பயன்பாட்டிற்காக JSON வடிவத்தில் (அடர்த்தியான QR குறியீடு) முழு VC ஐ உட்பொதிக்கிறது.",
-        "description3":"2. OnlineSharing: ஆன்லைன் VC சேமிப்பகத்திற்கு URL உடன் QR குறியீட்டை உருவாக்குகிறது, இது ஆன்லைனில் ஸ்கேன் செய்து பகிர்வதை எளிதாக்குகிறது."
-      }
+    "item9": {
+      "title": "நற்சான்றிதழ் PDF இல் QR குறியீட்டின் பங்கு என்ன?",
+      "description1": "PDF இல் உள்ள QR குறியீடு பாதுகாப்பான VC சேமிப்பக URL உடன் இணைக்கிறது, இது அடர்த்தியான தரவு இல்லாமல் நற்சான்றிதழ்களை ஸ்கேன் செய்து மீட்டெடுப்பதை எளிதாக்குகிறது."
+    },
+    "item10": {
+      "title": "இன்ஜி வாலட்டின் வலை இடைமுகம் எனது VC பாதுகாப்பாக சேமிக்கப்படுவதை எவ்வாறு உறுதி செய்கிறது?",
+      "description1": "MOSIP ID இயங்குதளத்தில் இருந்து தரவு பகிர்வு சேவையுடன் (துரியன்) ஒருங்கிணைக்கிறது, VC ஐ JSON பொருளாக சேமித்து, அங்கீகரிக்கப்பட்ட சரிபார்ப்பாளர்களுக்கு மட்டுமே அணுகல் பாதுகாக்கப்படுகிறது."
+    },
+    "item11": {
+      "title": "இன்ஜி வெரிஃபை உடன் ஆன்லைன் பகிர்வு அம்சம் எவ்வாறு செயல்படுகிறது?",
+      "description1": "1. VC PDF இல் QR குறியீடு உள்ளது.",
+      "description2": "2. PDF ஐ அச்சிடலாம் அல்லது தொலைபேசியில் சேமிக்கலாம். ",
+      "description3": "3. சரிபார்ப்பவர் (எ.கா., Inji Verify) QR குறியீட்டை ஸ்கேன் செய்கிறது. ",
+      "description4": "4. Inji Wallet அங்கீகரிக்கிறது மற்றும் VC ஐ சரிபார்ப்பவருடன் பகிர்ந்து கொள்கிறது."
+    },
+    "item12": {
+      "title": "முழு VC தரவுக்குப் பதிலாக QR குறியீட்டில் URL ஐ ஏன் உட்பொதிக்க வேண்டும்?",
+      "description1": "URL ஐ உட்பொதிப்பது, எளிதான ஸ்கேனிங்கிற்காக QR குறியீட்டின் அடர்த்தியைக் குறைக்கிறது, இது திறமையான குறுக்கு சாதனம் அல்லது தொலைநிலை சரிபார்ப்பை அனுமதிக்கிறது."
+    },
+    "item13": {
+      "title": "எனது VC ஐ ஆன்லைனில் மற்றும் ஆஃப்லைனில் பகிர்ந்து கொள்ள முடியுமா?",
+      "description1": "1. ஆன்லைன் : சரிபார்ப்பான் ஆனது PDF அல்லது ஃபோன் திரையில் இருந்து ஸ்கேன் செய்ய முடியும், மேலும் Inji Wallet VCஐ அங்கீகரித்து பகிரும். ",
+      "description2": "2. ஆஃப்லைன் : ஸ்கேனிங் மற்றும் VC மீட்டெடுப்பிற்காக அச்சிடப்பட்ட PDF ஐ வழங்கலாம்."
+    },
+    "item14": {
+      "title": "ஆன்லைன் பகிர்வின் போது Inji Wallet எவ்வாறு சரிபார்த்து அங்கீகாரம் அளிக்கிறது?",
+      "description1": "சரிபார்ப்பான் நற்சான்றிதழ்கள் உள் பட்டியலிலிருந்து சரிபார்க்கப்படும். அங்கீகரிக்கப்பட்டால், இணைய இடைமுகத்துடன் கூடிய இன்ஜி வாலட் VC ஐ vp_token ஐப் பயன்படுத்தி பாதுகாப்பாக சரிபார்ப்பிற்கு அனுப்புகிறது."
+    },
+    "item15": {
+      "title": "OpenID4VP என்றால் என்ன, அது Inji Wallet இல் எவ்வாறு பயன்படுத்தப்படுகிறது?",
+      "description1": "OpenID4VP (சரிபார்க்கக்கூடிய விளக்கக்காட்சிகளுக்கான OpenID) தரநிலை VC களின் பாதுகாப்பான பகிர்வை அனுமதிக்கிறது. Inji Wallet ஆனது VC சேமிப்பகத்திற்கான QR குறியீட்டை உருவாக்குகிறது, Inji Verify போன்ற சரிபார்ப்பவர்களை VC களை பாதுகாப்பாகக் கோரவும் பெறவும் உதவுகிறது."
+    },
+    "item16": {
+      "title": "இன்ஜி வாலட்டைப் பயன்படுத்தி எனது VC பாதுகாப்பாக பகிரப்பட்டது என்பதை நான் எப்படி அறிவது??",
+      "description1": "சரிபார்ப்பவர் QR குறியீட்டை ஸ்கேன் செய்து, Inji Wallet அங்கீகரித்த பிறகு, VC ஆனது சரிபார்ப்பவருக்குப் பாதுகாப்பாக வழங்கப்படும், அவர் அதைச் சரிபார்த்து உறுதிப்படுத்துகிறார்."
+    },
+    "item17": {
+      "title": "QR குறியீடு VC உருவாக்கப்பட்ட இடத்தில் இருந்து வேறொரு சாதனத்தில் ஸ்கேன் செய்யப்பட்டால் என்ன நடக்கும்?",
+      "description1": "குறுக்கு-சாதனப் பகிர்வை ஆதரிக்கிறது. VC PDF இன் எந்த நகலில் இருந்தும் சரிபார்ப்பவர் ஸ்கேன் செய்யலாம், மேலும் இன்ஜி வாலட் VC ஐச் சரிபார்த்து பாதுகாப்பாகப் பகிரும்."
+    },
+    "item18": {
+      "title": "இன்ஜி வாலட் வெவ்வேறு QR குறியீடு வடிவங்களை ஆதரிக்குமா?",
+      "description1": "ஆம். கட்டமைப்பு-அடிப்படையிலான தலைமுறை QR குறியீடுகளைக் கொண்டிருக்க அனுமதிக்கிறது: ",
+      "description2": "1. எளிதாக பகிர்வதற்காக VC சேமிப்பகத்திற்கு URL அல்லது ",
+      "description3": "2. JSON இல் முழு VC தரவு (அடர்வு வடிவம்)."
+    },
+    "item19": {
+      "title": "பகிர்ந்த பிறகு நற்சான்றிதழ் சரிபார்ப்பை Inji Wallet எவ்வாறு கையாள்கிறது?",
+      "description1": "பகிர்வுக்குப் பிறகு, இன்ஜி சரிபார்ப்பு VC நம்பகத்தன்மையை சரிபார்க்கிறது. செல்லுபடியாகும் எனில், சரிபார்ப்பவர் நற்சான்றிதழின் சரிபார்ப்பு நிலையை உறுதிப்படுத்துகிறார்."
+    },
+    "item20": {
+      "title": "என்ன வகையான நற்சான்றிதழ் வழங்குபவர்கள் ஆதரிக்கப்படுகிறார்கள்?",
+      "description1": "OpenID4VCI நெறிமுறையைப் பின்பற்றும் எந்தவொரு வழங்குநரையும் Inji Wallet இல் நம்பலாம். இந்த வழங்குநர்கள் VCகளை வழங்குவதற்கும் பதிவிறக்குவதற்கும் தேவையான தரவை வழங்குகிறார்கள்."
+    },
+    "item21": {
+      "title": "இந்த வெளியீட்டில் அறிமுகப்படுத்தப்பட்ட அம்சங்களைப் பற்றிய விரிவான தகவல்களை நான் எங்கே காணலாம்?",
+      "description1": "விவரத்திற்கு <a href=\"https://docs.mosip.io/inji/inji-web/overview\" target=\"_blank\">Inji Wallet ஆவணத்தைப்</a> பார்க்கவும் படிகள், கணினி மேலோட்டங்கள் மற்றும் புதிய அம்சங்களின் விளக்கங்கள்."
+    },
+    "item22": {
+      "title": "இன்ஜி வாலட்டில் ஆன்லைன் பகிர்வு அம்சத்தை நான் எவ்வாறு தொடங்குவது?",
+      "description1": "Inji Wallet's Web Interface வழியாக VCகளை அணுகவும், தரவிறக்கம் செய்து, QR குறியீட்டைப் பயன்படுத்தி நேரில் அல்லது ஆன்லைனில் சரிபார்ப்பாளர்களுடன் நற்சான்றிதழ்களைப் பகிரவும். விவரங்கள் <a href=\"https://docs.mosip.io/inji இல் /inji-web/functional-overview/end-user-guide\" target=\"_blank\"> பயனர் வழிகாட்டி </a> ."
+    },
+    "item23": {
+      "title": "இன்ஜி வாலட்டில் உட்பொதிக்கப்பட்ட VC மற்றும் ஆன்லைன் பகிர்வுக்கு இடையே நான் எப்படி மாறுவது?",
+      "description1": "Mimoto வழங்குபவரின் அமைப்புகளில் qr_code_type ஐ உள்ளமைக்கவும்: ",
+      "description2": "1. EmbeddedVC: ஆஃப்லைன் பயன்பாட்டிற்காக JSON வடிவத்தில் (அடர்த்தியான QR குறியீடு) முழு VC ஐ உட்பொதிக்கிறது.",
+      "description3": "2. OnlineSharing: ஆன்லைன் VC சேமிப்பகத்திற்கு URL உடன் QR குறியீட்டை உருவாக்குகிறது, இது ஆன்லைனில் ஸ்கேன் செய்து பகிர்வதை எளிதாக்குகிறது."
+    }
   },
   "DataShareExpiryModal": {
     "title": "பங்கு செல்லுபடியாகும்",
@@ -387,7 +387,7 @@
     "success": "தொடரவும்",
     "cancel": "மீண்டும்",
     "disclaimer": "நீங்கள் இங்கு எத்தனை முறை தேர்வு செய்தீர்களோ அந்த அளவுக்கு மட்டுமே QR குறியீட்டைப் பகிர முடியும் என்பதை நினைவில் கொள்ளவும். ",
-    "toastText":"விரைவில் வருகிறது"
+    "toastText": "விரைவில் வருகிறது"
   },
   "CustomExpiryModal": {
     "title": "இந்த நற்சான்றிதழை நீங்கள் எத்தனை முறை பயன்படுத்த விரும்புகிறீர்கள் என்பதை உள்ளிடவும் ",
@@ -478,6 +478,37 @@
         "title": "இணைய இணைப்பு இல்லை",
         "message": "உங்கள் இணைய இணைப்பை சரிபார்த்து மீண்டும் முயற்சிக்கவும்."
       }
+    }
+  },
+  "VerifierTrustPage": {
+    "modal": {
+      "title": "அறியப்படாத வழங்குநர்",
+      "domain": "verify.gov.in",
+      "description": "இந்த வழங்குநரை நீங்கள் அங்கீகரிக்கிறீர்கள் அல்லது நம்புகிறீர்கள் என்பதை உறுதிப்படுத்தவும். \nநீங்கள் இந்த வழங்குநரை நம்பிய பிறகு:",
+      "point1": "அட்டை உங்கள் வாலட்டில் பாதுகாப்பாகச் சேமிக்கப்படும்.",
+      "point2": "இந்த வழங்கி உங்கள் நம்பகமான பட்டியலில் சேர்க்கப்படும்.",
+      "point3": "அடுத்த முறை இவர்களிடமிருந்து பதிவிறக்கும்போது மீண்டும் நம்பகத்தன்மையைச் சரிபார்க்கத் தேவையில்லை.",
+      "trustButton": "ஆம், நான் இந்த வழங்கியை நம்புகிறேன்",
+      "notTrustButton": "இல்லை, நான் இந்த வழங்கியை நம்பவில்லை",
+      "cancelButton": "ரத்துசெய்",
+      "infoTooltipButton": "நம்புவது என்றால் என்ன?",
+      "infoTooltipText": "ஒரு வழங்கியை நம்புவது, உங்கள் சான்றுகளைக் கோர அவர்களை அனுமதிக்கிறது. அடுத்த கட்டத்தில் பகிர வேண்டிய சான்றுகளை நீங்கள் இன்னும் தேர்வு செய்வீர்கள்."
+    },
+    "cancelConfirmationModal": {
+      "title": "நீங்கள் ரத்துசெய்ய விரும்புகிறீர்களா?",
+      "description": "நீங்கள் இதை ரத்துசெய்தால், உங்கள் கோரிக்கை செயலாக்கப்படாது மற்றும் அது இழக்கப்படலாம்.",
+      "confirmButton": "ஆம், ரத்துசெய்",
+      "goBackButton": "பின் செல்லவும்"
+    },
+    "UserAuthorizationPage": {
+      "validateVerifierError": "வழங்கி கோரிக்கையைச் சரிபார்க்க முடியவில்லை. மீண்டும் முயற்சிக்கவும்.",
+      "invalidVerifierResponse": "தவறான வழங்கி பதில் பெறப்பட்டது.",
+      "addTrustedVerifierError": "நம்பகமான பட்டியலில் வழங்கியைச் சேர்க்க முடியவில்லை."
+    },
+    "ErrorCard": {
+      "defaultTitle": "பிழை",
+      "defaultDescription": "ஏதோ தவறு நடந்துவிட்டது. மீண்டும் முயற்சிக்கவும்.",
+      "closeButton": "மூடு"
     }
   }
 }
